# CSCI-335

./: .gitattributes  .gitignore  README.md  Regression.py  knn.py
code/: logistic-regression-hypertuning.py  svm-hypertuning.py
resources/: Documentation-libraries-used.txt
stockscrape-package/: .env.example  README.md  adaboost.py  add-type-columns.py  alembic.ini  dataSetGeneration.py  decisiontree.py  logistic-regression-hypertuning.py  logistic_regression.py  pyproject.toml  requirements.txt  svm-hypertuning.py  svm.py
stockscrape-package/Metrics/: LogisticRegressionModelMetrics.txt  SVMMetrics.txt  adaboostMetrics.txt  logistic-regression-tuning.txt  svm-hypertuning-outcomes.txt
stockscrape-package/alembic/: env.py
stockscrape-package/alembic/versions/: 9764a18aa922_initial_schema.py  9db8fdc9e20b_volume_to_bigint.py  a3fb1691548e_add_fundamentals_table.py
stockscrape-package/data/: companies.csv  daily_prices.csv  earnings_dataset.csv  fundamentals.csv
stockscrape-package/stockscrape/: __main__.py  config.py  db.py  metrics.py  models.py  pipeline.py  roic_client.py
stockscrape-package/stockscrape/scrapers/: companies.py  fundamentals.py  prices.py  transcripts.py  transcripts_import.py
