[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockscrape"
version = "0.1.0"
description = "Earnings call data pipeline for S&P 500 companies"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "pandas>=2.0",
    "lxml>=5.0",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]

[tool.setuptools.packages.find]
include = ["stockscrape*"]

[project.scripts]
stockscrape = "stockscrape.pipeline:main"
